emotional small heading text fix

--- a/index_emotional_ru.html
+++ b/index_emotional_ru.html
@@ -33,6 +33,10 @@
           <div class="row">
             <div class="col-md-12">
               <h2 class="fs-40">ДОПОЛНИТЕЛЬНЫЕ СРЕДСТВА – БЫСТРО, УДОБНО И ИМЕННО ТОГДА, КОГДА НУЖНО. ДА ХОТЬ ПРЯМО СЕЙЧАС.</h2>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-11">
               <p>Устали постоянно откладывать свои планы? Не знаете, сможете ли когда – нибудь воплотить в жизнь свои мечты? Кредитный счет – это возможность превратить желания в реальность.</p>
               <p class="question">КАКИМ ОБРАЗОМ?</p>
               <ul class="top-list">
