--- a/index_rational_ru.html
+++ b/index_rational_ru.html
@@ -139,8 +139,8 @@
                 <img src="./assets/images/rat-icon-3.png" alt="">
               </div>
               <div class="rat-txt">
-                <p class="number">128 млн</p>
-                <p>ЕВРО СУММА ВЫДАННЫХ КРЕДИТОВ</p>
+                <p class="number">128 млн евро</p>
+                <p>СУММА ВЫДАННЫХ КРЕДИТОВ</p>
               </div>
             </div>
           </div>
