fix res versions + add location

--- a/index_emotional.html
+++ b/index_emotional.html
@@ -72,7 +72,7 @@
                 </div>
               </div>
               <div class="panel-button-wrap">
-                <button type="button" class="btn btn-yellow">Taotlen Kohe</button>
+                <button type="button" class="btn btn-yellow" onclick="window.location='https://credit24.com/ee/application/'">Taotlen Kohe</button>
               </div>
             </div>
           </div>
@@ -207,7 +207,7 @@
           </div>
           <h5 class="info-bottom-text">Vii oma unistused täide. Kõik on võimalik.</h5>
           <div class="add-cash-button-wrap">
-            <button type="button" class="btn btn-yellow">Taotlen Kohe</button>
+            <button type="button" class="btn btn-yellow" onclick="window.location='https://credit24.com/ee/application/'">Taotlen Kohe</button>
           </div>
         </div>
       </div>
