--- a/index_rational.html
+++ b/index_rational.html
@@ -63,7 +63,7 @@
                 </div>
               </div>
               <div class="panel-button-wrap">
-                <button type="button" class="btn btn-yellow">Taotlen Kohe</button>
+                <button type="button" class="btn btn-yellow" onclick="window.location='https://credit24.com/ee/application/'">Taotlen Kohe</button>
               </div>
             </div>
           </div>
@@ -237,7 +237,7 @@
             </div>
           </div>
           <div class="add-cash-button-wrap">
-            <button type="button" class="btn btn-yellow">Taotlen Kohe</button>
+            <button type="button" class="btn btn-yellow" onclick="window.location='https://credit24.com/ee/application/'">Taotlen Kohe</button>
           </div>
         </div>
       </div>
