--- a/index_rational_ru.html
+++ b/index_rational_ru.html
@@ -24,7 +24,7 @@
             </div>
             <div class="col-xs-6 text-right">
               <a href="#" class="flag-link">
-                <img src="./assets/images/language-icon.png" alt="">
+                <img src="./assets/images/language-estonian.png" alt="">
               </a>
             </div>
           </div>
@@ -36,7 +36,7 @@
             </div>
             <div class="col-md-10">
               <h4>НО ИНОГДА ЭТОГО НЕДОСТАТОЧНО.</h4>
-              <p>К счастью, благодаря Кредитному счету не стоит опасаться непредвиденных расходов. Кредитный счет - как виртуальная кредитная карточка. Установите максимальный лимит и используйте средства в том размере и именно тогда, когда возникнет такая необходимость. Размер и время выплат можете также выбрать самостоятельно.</p>
+              <p>К счастью, благодаря Кредитному счету не стоит опасаться непредвиденных расходов. Кредитный счет - как виртуальная кредитная карточка. Установите максимальный лимит и используйте средства в том размере и именно тогда, когда возникнет такая необходимость. Сроки и суммы обратных платежей можете также выбирать по своему усмотрению.</p>
             </div>
           </div>
         </div>
@@ -65,7 +65,7 @@
                 </div>
               </div>
               <div class="panel-button-wrap">
-                <button type="button" class="btn btn-yellow">ОТПРАВИТЬ ЗАЯВКУ</button>
+                <button type="button" class="btn btn-yellow" onclick="window.location='https://credit24.com/ee/application/'">ОТПРАВИТЬ ЗАЯВКУ</button>
               </div>
             </div>
           </div>
@@ -234,12 +234,12 @@
                 <p>Выплаты с Кредитного счета на свой расчетный счет можете делать так часто и в таком размере, как сами пожелаете (хоть по 10 евро). Сумма выплат не должна превышать установленный Вами изначально лимит.</p>
               </div>
               <div class="check-layer">
-                <p>После возврата использованной суммы, Вы снова получите возможность использовать дополнительные средства в пределах установленного лимита.</p>
+                <p>После возврата использованной суммы, Вы снова получите доступ к дополнительным средствам в пределах установленного лимита.</p>
               </div>
             </div>
           </div>
           <div class="add-cash-button-wrap">
-            <button type="button" class="btn btn-yellow">ОТПРАВИТЬ ЗАЯВКУ</button>
+            <button type="button" class="btn btn-yellow" onclick="window.location='https://credit24.com/ee/application/'">ОТПРАВИТЬ ЗАЯВКУ</button>
           </div>
         </div>
       </div>
