--- a/index_ru.html
+++ b/index_ru.html
@@ -70,7 +70,7 @@
                 </div>
               </div>
               <div class="panel-button-wrap">
-                <button type="button" class="btn btn-yellow">ОТПРАВИТЬ ЗАЯВКУ</button>
+                <button type="button" class="btn btn-yellow" onclick="window.location='https://credit24.com/ee/application/'">ОТПРАВИТЬ ЗАЯВКУ</button>
               </div>
             </div>
           </div>
@@ -233,7 +233,7 @@
                           <span>Деньги будут перечислены на Ваш персональный счет в Credit24.</span>
                         </li>
                       </ul>
-                      <button type="button" class="btn btn-yellow">ОТПРАВИТЬ ЗАЯВКУ</button>
+                      <button type="button" class="btn btn-yellow" onclick="window.location='https://credit24.com/ee/application/'">ОТПРАВИТЬ ЗАЯВКУ</button>
                     </div>
                   </div>
                 </div>
