--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 </div>
               </div>
               <div class="panel-button-wrap">
-                <button type="button" class="btn btn-yellow">Taotlen Kohe</button>
+                <button type="button" class="btn btn-yellow" onclick="window.location='https://credit24.com/ee/application/'">Taotlen Kohe</button>
               </div>
             </div>
           </div>
@@ -230,7 +230,7 @@
                           <span>Raha kantakse Sinu Credit24 kontole.</span>
                         </li>
                       </ul>
-                      <button type="button" class="btn btn-yellow">Taotlen Kohe</button>
+                      <button type="button" class="btn btn-yellow" onclick="window.location='https://credit24.com/ee/application/'">Taotlen Kohe</button>
                     </div>
                   </div>
                 </div>
