--- a/index_emotional_ru.html
+++ b/index_emotional_ru.html
@@ -24,7 +24,7 @@
             </div>
             <div class="col-xs-6 text-right">
               <a href="#" class="flag-link">
-                <img src="./assets/images/language-icon.png" alt="">
+                <img src="./assets/images/language-estonian.png" alt="">
               </a>
             </div>
           </div>
@@ -41,7 +41,7 @@
               <p class="question">КАКИМ ОБРАЗОМ?</p>
               <ul class="top-list">
                 <li><img src="./assets/images/tick.png" alt=""> БЫСТРО - <span>Деньги получите всего за 15 минут</span></li>
-                <li><img src="./assets/images/tick.png" alt=""> ИНДИВИДУАЛЬНО - <span>Можете ходатайствовать о сумме до 4000</span></li>
+                <li><img src="./assets/images/tick.png" alt=""> ИНДИВИДУАЛЬНО - <span>Можете ходатайствовать о сумме до 4000€</span></li>
                 <li><img src="./assets/images/tick.png" alt=""> ГИБКО - <span>Размер и время выплат можете выбрать самостоятельно</span></li>
               </ul>
             </div>
@@ -72,7 +72,7 @@
                 </div>
               </div>
               <div class="panel-button-wrap">
-                <button type="button" class="btn btn-yellow">ОТПРАВИТЬ ЗАЯВКУ</button>
+                <button onclick="window.location='https://credit24.com/ee/application/'" class="btn btn-yellow">ОТПРАВИТЬ ЗАЯВКУ</button>
               </div>
             </div>
           </div>
@@ -133,7 +133,7 @@
           <div class="row">
             <div class="col-md-6">
               <div class="phone-img-wrap rus-lang">
-                <img class="phone-card" src="./assets/images/phone-card.png" alt="">
+                <img class="phone-card" src="./assets/images/phone-card-rus.png" alt="">
               </div>
             </div>
             <div class="col-md-6">
@@ -210,7 +210,7 @@
           </div>
           <h5 class="info-bottom-text">Пусть мечты сбываются. Все возможно!</h5>
           <div class="add-cash-button-wrap">
-            <button type="button" class="btn btn-yellow">ОТПРАВИТЬ ЗАЯВКУ</button>
+            <button type="button" class="btn btn-yellow" onclick="window.location='https://credit24.com/ee/application/'">ОТПРАВИТЬ ЗАЯВКУ</button>
           </div>
         </div>
       </div>
